--- a/app/templates/artwork_delete.html
+++ b/app/templates/artwork_delete.html
@@ -16,6 +16,8 @@
 		</div>
 	</section>
 
+	{% include "include/user.html" %}
+
 	<form id="js-form_artwork" action="/artworks/{{ artwork.id }}/delete" method="POST">
 		{{ form.csrf_token }}
 
