Add user include template

--- a/app/templates/artworks.html
+++ b/app/templates/artworks.html
@@ -17,7 +17,7 @@
 		</div>
 	</section>
 
-
+	{% include "include/user.html" %}
 
 	<section id="section--artworks">
 		<div class="[ row justify-content-center py-5 ]">
