--- a/app/templates/park_delete.html
+++ b/app/templates/park_delete.html
@@ -16,6 +16,8 @@
 		</div>
 	</section>
 
+	{% include "include/user.html" %}
+
 	<form id="js-form_park" action="/parks/{{ park.id }}/delete" method="POST">
 		{{ form.csrf_token }}
 
