--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i" rel="stylesheet">
 
     <script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block head_extras %}{% endblock %}
