--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -26,12 +26,14 @@
 	<form id="js-form_org" action="/orgs/{{ org.id }}/edit" method="POST">
 		{{ form.csrf_token }}
 
-		<div class="[ row justify-content-center ]">
-			<div class="[ col-sm-12 col-md-8 text-right pt-5 pb-4 ]">
-				<button id="js-edit_org" class="js-form-edit butt butt--edit" type="button">Edit</button>
-				<a href="{{ url_for('org_delete', org_id=org.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
+		{% if current_user.is_authenticated %}
+			<div class="[ row justify-content-center ]">
+				<div class="[ col-sm-12 col-md-8 text-right pt-5 pb-4 ]">
+					<button id="js-edit_org" class="js-form-edit butt butt--edit" type="button">Edit</button>
+					<a href="{{ url_for('org_delete', org_id=org.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 
 
 
@@ -126,15 +128,16 @@
 		</section>
 
 
-
-		<section id="section--submit">
-			<div class="[ row justify-content-center d-none ]">
-				<div class="[ col-sm-12 col-md-8 text-right py-4 ]">
-					<button id="js-cancel_org" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
-					<button id="js-post_org" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
+		{% if current_user.is_authenticated %}
+			<section id="section--submit">
+				<div class="[ row justify-content-center d-none ]">
+					<div class="[ col-sm-12 col-md-8 text-right py-4 ]">
+						<button id="js-cancel_org" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
+						<button id="js-post_org" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		{% endif %}
 
 	</form>
 
