--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -25,12 +25,15 @@
 	<form id="js-form_park" action="/parks/{{ park.id }}/edit" method="POST">
 		{{ form.csrf_token }}
 
-		<div class="[ row justify-content-center ]">
-			<div class="[ col-md-8 text-right pt-5 pb-4 ]">
-				<button id="js-edit_park" class="js-form-edit butt butt--edit" type="button">Edit</button>
-				<a href="{{ url_for('park_delete', park_id=park.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
+		{% if current_user.is_authenticated %}
+			<div class="[ row justify-content-center ]">
+				<div class="[ col-md-8 text-right pt-5 pb-4 ]">
+					<button id="js-edit_park" class="js-form-edit butt butt--edit" type="button">Edit</button>
+					<a href="{{ url_for('park_delete', park_id=park.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
+				</div>
 			</div>
-		</div>
+		{% endif %}
+
 
 
 		<section id="section--bio">
@@ -144,15 +147,16 @@
 		</section>
 
 
-
-		<section id="section--submit">
-			<div class="[ row justify-content-center d-none ]">
-				<div class="[ col-md-8 text-right py-4 ]">
-					<button id="js-cancel_park" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
-					<button id="js-post_park" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
+		{% if current_user.is_authenticated %}
+			<section id="section--submit">
+				<div class="[ row justify-content-center d-none ]">
+					<div class="[ col-md-8 text-right py-4 ]">
+						<button id="js-cancel_park" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
+						<button id="js-post_park" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		{% endif %}
 
 	</form>
 
