Add active/upcoming/recent exhibitions lists

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -19,14 +19,92 @@
 	{% include "include/user.html" %}
 
 
+	<section id="section--active">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+		
+				<h2 class="[ display-4 py-4 ]">Active Exhibitions</h2>
+		
+				{% for exhibition in active_exhibitions %}
+		
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<ul class="[ list-unstyled p-0 ]">
+						<li>Start date: {{ exhibition.start_date }}</li>
+						<li>End date: {{ exhibition.end_date }}</li>
+					</ul>
+		
+				{% else %}
+		
+					<p><i>There are no active exhibitions right now.</i></p>
+		
+				{% endfor %}
+		
+			</div>
+		</div>
+	</section>
+
+
+	<section id="section--upcoming">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Upcoming Exhibitions</h2>
+
+				{% for exhibition in upcoming_exhibitions %}
+
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<ul class="[ list-unstyled p-0 ]">
+						<li>Start date: {{ exhibition.start_date }}</li>
+						<li>End date: {{ exhibition.end_date }}</li>
+					</ul>
+
+				{% else %}
+
+					<p><i>There are no upcoming exhibitions right now.</i></p>
+
+				{% endfor %}
+
+			</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--recent">
+		<div class="chunk [ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Recent Exhibitions</h2>
+
+				{% for exhibition in recent_exhibitions %}
+
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<ul class="[ list-unstyled p-0 ]">
+						<li>Start date: {{ exhibition.start_date }}</li>
+						<li>End date: {{ exhibition.end_date }}</li>
+					</ul>
+
+				{% else %}
+
+					<p><i>There are no recent exhibitions right now.</i></p>
+
+				{% endfor %}
+
+			</div>
+		</div>
+	</section>
+
+
 
 	<section id="section--exhibitions">
-		<div class="[ row justify-content-center py-5 ]">
+		<div class="chunk [ row justify-content-center py-5 ]">
 			<div class="[ col-md-8 ]">
+
+				<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
 				{% for exhibition in exhibitions %}
 
-					<h2 class="[ display-4 pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h2>
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date|date_format }}</li>
 						<li>Install Date(s): {{ exhibition.install_start|date_format }}{%if exhibition.install_end %} to {{ exhibition.install_end|date_format }}{% endif %}</li>
